[gd_scene load_steps=15 format=3 uid="uid://c1nko4yyonafj"]

[ext_resource type="Script" uid="uid://cm8w86jwnp3vb" path="res://scenes/objects/players/weapons/copy_robot/buster_small.gd" id="1_ibwb5"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/players/copy_robot/weapons/BusterSmall.png" id="1_mtts4"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="4_6625l"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://sounds/tink.wav" id="5_qdnsf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2ww"]
atlas = ExtResource("1_mtts4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1uqn"]
atlas = ExtResource("1_mtts4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("1_mtts4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("1_mtts4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("1_mtts4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5hut"]
atlas = ExtResource("1_mtts4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_al7f4"]
atlas = ExtResource("1_mtts4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty82d"]
atlas = ExtResource("1_mtts4")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2ww")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1uqn")
}],
"loop": true,
"name": &"fast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5hut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al7f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty82d")
}],
"loop": false,
"name": &"hit2",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjbb8"]
size = Vector2(8, 6)

[node name="BusterSmall" type="CharacterBody2D"]
process_mode = 1
z_index = 1
collision_layer = 8
collision_mask = 0
script = ExtResource("1_ibwb5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"fast"
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.57628e-07, 0)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bjbb8")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6625l")
volume_db = -4.0
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qdnsf")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
